--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="buttons blackButtons" id="oneButton">1</div>
                 <div class="buttons blackButtons" id="twoButton">2</div>
                 <div class="buttons blackButtons" id="threeButton">3</div>
-                <div class="buttons" id="equalButton" id="equalsButton">=</div>
+                <div class="buttons"  id="equalsButton">=</div>
             </div>
             
             <div class="row5">
